@@ -6,6 +6,7 @@ MovieJukebox 2.5 SNAPSHOT
 -------------------------
  - Enhancement  #1853 Multiple index pages
  - Enhancement  #1895 AniDbPlugin caches anime information
+ - Fixed defect #1896 AniDbPlugin falls back to romaji title if no english title exists
 
 MovieJukebox 2.4
 ----------------
